- fixed side bar small overflow issue

--- a/csvEditorHtml/main.css
+++ b/csvEditorHtml/main.css
@@ -253,7 +253,8 @@ body .modal {
 	display: flex;
 	flex: 1;
 	/* needs to be hidden else the content (the table height will resize this larger than it should), see onResizeGrid */
-	overflow: hidden;
+	/* everything seems to work as expected, if we hide this, some tooltips inside the panel are not fully readable*/
+	/* overflow: hidden; */
 }
 
 .side-paneled .side-panel {
